--- a/templates/recommendations.html
+++ b/templates/recommendations.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
   <div class="header">
-    <h1 class="page-title">AI Recommendations</h1>
+    <h1 class="page-title">AI Recommendations for You</h1>
     <div class="header-actions">
       <div class="date-filter">
         <span class="date-filter-icon"><i class="fas fa-calendar"></i></span>
